<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.pillativecareapp.ui.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background">

        <ImageView
            android:id="@+id/logo_icon"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="48dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_view_username"
            style="@style/TextStyle.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/username_label"
            android:textColor="@color/on_background_87"
            app:layout_constraintStart_toStartOf="@+id/edit_text_username"
            app:layout_constraintTop_toBottomOf="@+id/logo_icon" />

        <EditText
            android:id="@+id/edit_text_username"
            style="@style/TextStyle.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/selector_field"
            android:lines="1"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:singleLine="true"
            android:textColor="@color/on_background_60"
            android:tint="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/text_view_username" />

        <TextView
            android:id="@+id/text_view_username_validate"
            style="@style/TextStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/username_validate"
            android:textColor="@color/error_color"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/edit_text_username"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username" />

        <TextView
            android:id="@+id/text_view_password"
            style="@style/TextStyle.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/password"
            android:textColor="@color/on_background_87"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/text_view_username_validate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_password"
            app:passwordToggleDrawable="@drawable/selector_password_icon"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/on_background_60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_input_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_field"
                android:background="@drawable/selector_field"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAppearance="@style/TextStyle.BodyMedium"
                android:textColor="@color/on_background_60"
                tools:text="testhere" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_password_validate"
            style="@style/TextStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/password_validate"
            android:textColor="@color/error_color"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

        <TextView
            android:id="@+id/text_view_confirm_password"
            style="@style/TextStyle.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/confirm_password"
            android:textColor="@color/on_background_87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_password_validate" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_confirm_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="@+id/text_view_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/text_view_confirm_password"
            app:passwordToggleDrawable="@drawable/selector_password_icon"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_confirm_password"
                style="@style/TextStyle.BodyMedium.TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_field"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/text_view_validate_confirm"
            style="@style/TextStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_small"
            android:textColor="@color/error_color"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirm_password" />

        <Button
            android:id="@+id/button_register"
            style="@style/TextStyle.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_giant"
            android:background="@drawable/shape_corner_radius"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/on_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirm_password" />

        <TextView
            android:id="@+id/text_view_do_you_have_an_account"
            style="@style/TextStyle.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/you_already_have_an_account"
            android:textColor="@color/on_primary_container_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_register"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/text_view_login"
            style="@style/TextStyle.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:fontFamily="@font/lato"
            android:text="@string/login"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_do_you_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_do_you_have_an_account"
            app:layout_constraintTop_toTopOf="@+id/text_view_do_you_have_an_account" />

        <ProgressBar
            android:id="@+id/progress_bar_reload"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_giant"
            android:indeterminateTint="@color/primary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>