<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.pillativecareapp.patientSide.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background">

        <ImageView
            android:id="@+id/logo_icon"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="48dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_username"
            style="@style/TextStyle.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="Email"
            android:textColor="@color/on_background_87"
            app:layout_constraintStart_toStartOf="@+id/edit_text_email"
            app:layout_constraintTop_toBottomOf="@+id/logo_icon" />

        <EditText
            android:id="@+id/edit_text_email"
            style="@style/TextStyle.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/selector_field"
            android:lines="1"
            android:text="@={viewModel.currentUser.email}"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:singleLine="true"
            android:textColor="@color/on_background_60"
            android:tint="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/text_view_username" />

        <TextView
            android:id="@+id/text_view_username_validate"
            style="@style/TextStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/username_validate"
            android:textColor="@color/error_color"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/edit_text_email"
            app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

        <TextView
            android:id="@+id/text_view_password"
            style="@style/TextStyle.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="password"
            android:textColor="@color/on_background_87"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/text_view_username_validate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_password"
            app:passwordToggleDrawable="@drawable/selector_password_icon"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/on_background_60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_input_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_field"
                android:background="@drawable/selector_field"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.currentUser.password}"
                android:textAppearance="@style/TextStyle.BodyMedium"
                android:textColor="@color/on_background_60"
                tools:text="testhere" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_password_validate"
            style="@style/TextStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/password_validate"
            android:textColor="@color/error_color"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_giant"
            android:layout_marginBottom="@dimen/spacing_giant"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/text_view_register_body"
            app:layout_constraintTop_toBottomOf="@+id/text_view_password_validate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            style="@style/TextStyle.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_extra_giant"
            android:background="@drawable/shape_corner_radius"
            android:text="@string/login_btn_label"
            android:textAllCaps="false"
            android:onClick="@{() -> viewModel.login()}"
            android:textColor="@color/on_primary"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/text_view_password_validate" />

        <TextView
            android:id="@+id/text_view_dont_have_an_account_login"
            style="@style/TextStyle.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_giant"
            android:text="@string/if_you_don_t_have_an_account"
            android:textColor="@color/on_background_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_register_body"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintVertical_bias="0.779" />

        <TextView
            android:id="@+id/text_view_register_body"
            style="@style/TextStyle.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:clickable="true"
            android:text="@string/register"
            android:onClick="@{() -> viewModel.navigateToSignUp()}"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_dont_have_an_account_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_dont_have_an_account_login"
            app:layout_constraintTop_toTopOf="@+id/text_view_dont_have_an_account_login"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>